# quark

./: CMakeLists.txt  notes.txt
engine/: CMakeLists.txt
engine/include/engine/: Application.hh  Camera.hh  Exception.hh  Input.hh  InputChannel.hh  Light.hh  Material.hh  Matrix4.hh  Mesh.hh  Mesher.hh  Object.hh  Quaternion.hh  Renderer.hh  Serializer.hh  Shader.hh  Texture.hh  Timer.hh  Transform.hh  Vector.hh  Vector2.hh  Vector3.hh
engine/include/engine/opengl/: Mesh.hh  Renderer.hh  Shader.hh  Texture.hh
engine/source/: Application.cc  Camera.cc  Exception.cc  Input.cc  InputChannel.cc  Material.cc  Mesh.cc  Mesher.cc  Object.cc  Renderer.cc  Serializer.cc  Shader.cc  Texture.cc  Timer.cc  Transform.cc
engine/source/opengl/: Mesh.cc  Renderer.cc  Shader.cc  Texture.cc
game/: CMakeLists.txt
game/source/: Game.cc  Level.cc  Level.hh
shaders/: colored-fragments.glsl  colored-vertex.glsl  fragments.glsl  vertex.glsl
tools/mesher/: CMakeLists.txt  Wavefront.cc  Wavefront.hh  main.cc
